updated pages and added contact page and its route

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <h1>Dr. Zully Lizarazo</h1>
     <p>Clinical Psychologist</p>
     <nav aria-label="Main navigation">
-      <a href="index.html">Home</a>
-      <a href="services.html" aria-current="page">Services</a>
+      <a href="index.html" aria-current="page">Home</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact Me</a>
       <a href="schedule.html">Book Consult</a>
     </nav>
     <div>
