--- a/schedule.html
+++ b/schedule.html
@@ -21,6 +21,7 @@
     <nav aria-label="Main navigation">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
+      <a href="contact.html">Contact Me</a>
       <a href="schedule.html" aria-current="page">Book Consult</a>
     </nav>
     <div>
