--- a/services.html
+++ b/services.html
@@ -18,6 +18,7 @@
     <nav aria-label="Main navigation">
       <a href="index.html">Home</a>
       <a href="services.html" aria-current="page">Services</a>
+      <a href="contact.html">Contact Me</a>
       <a href="schedule.html">Book Consult</a>
     </nav>
     <div>
