updated scheduling page and styles css

--- a/contact.html
+++ b/contact.html
@@ -43,14 +43,27 @@
           </a>
           zlizarazo@bop.gov
         </p>
-        <p><strong>Phone:</strong> (813) 650-1652</p>
         <p><strong>Location:</strong> San Diego, CA (Telehealth Available)</p>
         <p>
           <a href="https://linkedin.com/in/drzullylizarazo" class="social-icon" target="_blank" title="LinkedIn">
-            <i class="fab fa-linkedin"></i> LinkedIn Profile
+            Follow me <i class="fab fa-linkedin"></i> 
           </a>
         </p>
       </div>
+    </section>
+
+    <section>
+      <form>
+        <div>
+          <label for="name">Name:</label><br>
+          <input type="text" id="name" name="name" required><br><br>
+          <label for="email">Email:</label><br>
+          <input type="email" id="email" name="email" required><br><br>
+          <label for="message">Message:</label><br>
+          <textarea id="message" name="message" rows="4" required></textarea><br><br>
+          <button type="submit">Submit</button>
+        </div>
+      </form>
     </section>
 
     <footer style="text-align:center; margin-top: 4rem;">
