--- a/schedule.html
+++ b/schedule.html
@@ -6,8 +6,7 @@
   <title>Schedule Appointment | Dr. Zully Lizarazo</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <!-- Calendly widget stylesheet -->
-  <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+  <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet"> <!-- Calendly widget stylesheet -->
 </head>
 <body>
   <button id="menu-toggle" aria-label="Open navigation" style="display:none;position:fixed;top:1rem;left:1rem;z-index:1000;font-size:2rem;background:none;border:none;cursor:pointer;">
