updated styling in scheduling page

--- a/schedule.html
+++ b/schedule.html
@@ -45,7 +45,7 @@
       <!-- Calendly inline widget end -->
       
       <!-- Alternative: Button to open Calendly popup -->
-      <div style="margin-top: 2rem; text-align: center;">
+      <div style="margin-top: 2rem; margin-bottom: 4rem; text-align: center; width: 100%;">
         <p><strong>Prefer a popup window?</strong></p>
         <a href="" 
            onclick="Calendly.initPopupWidget({url: 'https://calendly.com/zlizarazob/30min'}); return false;"
